--- a/product-desc.css
+++ b/product-desc.css
@@ -6,16 +6,26 @@
     padding-inline-start: 0;
 }
 
-#shortcut-links li, #shortcut-links a {
-    color: gray;
-    text-decoration: none;
-
-    float: left;
-    font-size: 15px;
-    padding-right: 1%;
+#shortcut-links, #shortcut-links-2 {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    gap: 0.3rem;
 }
 
-#shortcut-links #product-path-name {
+#shortcut-links a, #shortcut-links-2 a {
+    text-decoration: none;
+    color: grey;
+}
+
+.grey-out {
+    color: grey;
+}
+
+#product-path-name-desktop, #product-path-name-mobile {
     color: black;
 }
 
@@ -37,11 +47,9 @@ main {
     flex-direction: column;
     gap: 2%;
     margin-bottom: 5rem;
-
-
 }
 
-#pro-img-1 {
+#pro-img-1, #pro-img-2 {
     align-items: center;
 }
 
@@ -77,7 +85,7 @@ main {
 }
 
 .acc-chevron {
-    width: 10px;
+    width: 15px;
 }
 
 .acc-body {
@@ -101,13 +109,14 @@ main {
 
 /* RIGHT */
 .product-desc-right {
+    display: flex;
     flex: 2;
     flex-direction: column;
     margin-bottom: 5%;
     padding-top: 4rem;
 }
 
-.product-desc-right h2 {
+#product-name {
     text-align: left;
     margin: 0;
     margin-bottom: 0.5em;
@@ -115,13 +124,14 @@ main {
     font-weight: 600;
 }
 
-.product-desc-right h3 {
+#product-price {
     text-align: left;
     margin: 0;
     margin-bottom: 0.5em;
     padding-left: 2%;
     font-weight: 400;
 }
+
 
 .product-desc-right h5 {
     text-align: left;
@@ -170,6 +180,12 @@ hr {
     color: black;
     border: none;
     border-radius: 5px;
+    transition: 0.3s ease;
+}
+
+.customisation-field select:hover {
+    cursor: pointer;
+    filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.2));
 }
 
 #custom-comment {
@@ -187,7 +203,7 @@ hr {
     text-transform: uppercase;
     color: black;
     font-family: "Montserrat", sans-serif;
-    margin-bottom: 1em;
+    padding-bottom: 1em;
 }
 
 
@@ -210,4 +226,60 @@ hr {
     filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.5));
 }
 
+#hidden-image-product-desc {
+    display: none;
+    
+}
+
+
+@media (max-width: 700px) {
+    main {
+        flex-direction: column-reverse;
+    }
+
+    #hidden-image-product-desc {
+        display: block;
+    }
+
+    #shortcut-links-2 {
+        white-space: normal;
+        font-size: 10px;
+        text-decoration: none;
+    }
+    
+    .product-description-left #shortcut-links {
+        display: none;
+    }
+
+    #pro-img-2 {
+        margin-top: 2%;
+        margin-bottom: 5%;
+    }
+
+    .product-desc-right h5 {
+        text-align: center;
+    }
+
+    .img-desktop-view {
+        display: none;
+    }
+
+    .customisation-field {
+        width: 100%;
+    }
+
+    .product-desc-right p {
+        text-align: center;
+    }
+
+    .category {
+        text-align: center;
+        padding-bottom: 1em;
+    }
+
+    .product-desc-right {
+        justify-content: center;
+        align-items: center;
+    }
+}
 
